feat: 更新接口定义脚本&增加登录dome
